# rescript-compiler

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .ignore  .istanbul.yml  .merlin  .npmignore  .ocamlformat  .ocamlformat-ignore  .prettierignore  .prettierrc  .travis-ci-before-script.sh  .travis-ci.sh  .travis.yml  4061.json  Build-the-compiler-in-dev-mode.md  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_EXTRA.md  CREDITS.md  Changes  Changes.md  Compiler-options.html  Compiler-options.md  Compiler-overview.html  Compiler-overview.md  Contributing.md  Create-a-simple-example-with-NPM.html  Credits.md  Curry-and-Uncurry-functions.html  DCO.md  Dev-mode-How-to.html  Developer-Certificate-of-Origin-1.1.md  Developing-bucklescript.md  Difference-from-js_of_ocaml.md  Differences-from-js_of_ocaml.html  Experimental-support-of-typescript.html  Experimental-support-of-typescript.md  (+75 more)
compiler/: dune  dune-project
compiler/bsb/: bsb_arg.ml  bsb_build_schemas.ml  bsb_build_util.ml  bsb_build_util.mli  bsb_clean.ml  bsb_config.ml  bsb_config.mli  bsb_config_load.ml  bsb_config_load.mli  bsb_config_parse.ml  bsb_config_parse.mli  bsb_config_types.ml  bsb_db_encode.ml  bsb_db_encode.mli  bsb_db_util.ml  bsb_exception.ml  bsb_exception.mli  bsb_file_groups.ml  bsb_file_groups.mli  bsb_global_paths.ml  bsb_global_paths.mli  bsb_jsx.ml  bsb_log.ml  bsb_namespace_map_gen.mli  bsb_ninja_check.ml  bsb_ninja_check.mli  bsb_ninja_file_groups.ml  bsb_ninja_gen.ml  bsb_ninja_gen.mli  bsb_ninja_global_vars.ml  bsb_ninja_regen.ml  bsb_ninja_regen.mli  bsb_ninja_rule.ml  bsb_ninja_rule.mli  bsb_ninja_targets.ml  bsb_ninja_targets.mli  bsb_package_kind.ml  bsb_package_specs.ml  bsb_parse_sources.ml  bsb_pkg.ml  (+14 more)
compiler/bsb_exe/: dune  rescript_main.ml
compiler/bsb_helper/: bsb_db_decode.ml  bsb_db_decode.mli  bsb_helper_depfile_gen.ml  bsb_helper_depfile_gen.mli  dune
compiler/bsb_helper_exe/: bsb_helper_main.ml  bsb_helper_main.mli  dune
compiler/bsc/: rescript_compiler_main.ml
compiler/cmij/: cmjdump_main.ml
compiler/common/: bs_version.ml  bs_version.mli  bs_warnings.ml  dune  ext_log.mli  js_config.ml  js_config.mli  ml_binary.ml  ml_binary.mli  pattern_printer.ml
compiler/core/: FIXME.adoc  bs_cmi_load.ml  bs_conditional_initial.ml  bs_conditional_initial.mli  cmd_ast_exception.ml  cmd_ppx_apply.ml  config_util.ml  config_util.mli  dune  j.ml  js_analyzer.ml  js_analyzer.mli  js_block_runtime.ml  js_call_info.ml  js_call_info.mli  js_cmj_format.ml  js_cmj_format.mli  js_cmj_load.ml  js_cmj_load.mli  js_dump.ml  js_dump_import_export.ml  js_dump_import_export.mli  js_dump_lit.ml  js_dump_program.ml  js_dump_program.mli  js_dump_property.ml  js_dump_string.ml  js_exp_make.ml  js_exp_make.mli  js_fold.ml  js_fold_basic.ml  js_fold_basic.mli  js_fun_env.ml  js_fun_env.mli  js_implementation.ml  js_implementation.mli  js_name_of_module_id.ml  js_of_lam_array.ml  js_of_lam_array.mli  js_of_lam_block.ml  (+107 more)
compiler/depends/: ast_extract.mli  astdump_main.md  binary_ast.ml  binary_ast.mli  bs_exception.ml  dune
compiler/ext/: bsb_db.ml  bsb_db.mli  bsc_args.ml  config.mli  ext_array.ml  ext_array.mli  ext_basic_hash_stubs.c  ext_buffer.ml  ext_buffer.mli  ext_bytes.mli  ext_char.ml  ext_color.ml  ext_file_extensions.ml  ext_filename.ml  ext_filename.mli  ext_ident.ml  ext_ident.mli  ext_int.ml  ext_int.mli  ext_io.ml  ext_js_file_kind.ml  ext_js_regex.ml  ext_json.ml  ext_json_noloc.ml  ext_json_parse.mll  ext_json_types.ml  ext_list.ml  ext_list.mli  ext_module_system.ml  ext_modulename.ml  ext_modulename.mli  ext_namespace.ml  ext_namespace.mli  ext_namespace_encode.ml  ext_obj.ml  ext_option.ml  ext_path.ml  ext_pervasives.ml  ext_position.ml  ext_position.mli  (+39 more)
compiler/frontend/: ast_attributes.mli  ast_comb.ml  ast_comb.mli  ast_compatible.ml  ast_compatible.mli  ast_config.ml  ast_config.mli  ast_core_type.ml  ast_core_type.mli  ast_core_type_class_type.ml  ast_core_type_class_type.mli  ast_derive.ml  ast_derive_abstract.ml  ast_derive_js_mapper.ml  ast_derive_projector.ml  ast_derive_util.mli  ast_exp.mli  ast_exp_apply.mli  ast_exp_extension.ml  ast_exp_handle_external.ml  ast_external.ml  ast_external_mk.ml  ast_external_process.ml  ast_external_process.mli  ast_open_cxt.ml  ast_pat.ml  ast_pat.mli  ast_polyvar.ml  ast_signature.mli  ast_structure.ml  ast_tdcls.ml  ast_tuple_pattern_flatten.ml  ast_typ_uncurry.ml  ast_typ_uncurry.mli  ast_uncurry_gen.ml  ast_utf8_string.ml  ast_utf8_string_interp.mli  ast_util.ml  ast_util.mli  bs_ast_invariant.ml  (+7 more)
compiler/gentype/: Annotation.ml  Debug.ml  EmitType.ml  FindSourceFile.mli  GenTypeCommon.ml  GenTypeConfig.ml  GenTypeMain.ml  ImportPath.ml  ImportPath.mli  ModuleExtension.ml  ModuleName.ml  NamedArgs.ml  Paths.ml  ResolvedName.mli  Runtime.ml  Runtime.mli  TranslateCoreType.ml  TranslateSignature.ml  TranslateSignatureFromTypes.ml  TranslateStructure.ml  TranslateTypeDeclarations.ml  TranslateTypeExprFromTypes.ml  TypeEnv.mli  dune
compiler/js_parser/: enum_common.ml  flow_ast.ml  flow_lexer.ml  wtf8.ml  wtf8.mli
compiler/jsoo/: dune  jsoo_playground_main.ml
compiler/ml/: annot.ml  ast_async.ml  ast_await.ml  ast_helper.ml  ast_helper.mli  btype.ml  (+127 more)
jscomp/: .merlin  .ocamlinit  .watchmanconfig  406.ninja  Docs.md  Makefile  Makefile.shared  README.adoc  README.md  _tags  all.depend  artifacts.json  bb_require.js  bench.js  big_compiler.mllib  binary_ast.ml  binary_ast.mli  bs_build_ui.ml  bs_conditional_initial.mli  bs_dep_infos.mli  bs_dir.ml  bs_exception.ml  bs_exception.mli  bs_loc.ml  bs_loc.mli  bs_ninja.ml  bs_ninja.mli  bs_ppx_main.ml  bsb_main.ml  bsbuild_main.ml  bsdep_main.ml  bspack_main.ml  bspp_main.ml  bsppx_main.ml  build.json  build.ninja  build.sh  build_reserved.js  build_sorted.ml  build_version.js  (+314 more)
res_syntax/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dune-project  rescript-syntax.opam
rewatch/: .gitignore  .gitmodules  .tmuxinator.yaml  Cargo.toml  CompilerConfigurationSpec.md  README.md  package.json  postinstall.js  release.sh  rewatch  rewatch.cmd  rustfmt.toml
(+18587 files in other folders)
