(dirs bsb bsb_exe bsb_helper bsb_helper_exe bsc cmij common core depends ext
  frontend gentype jsoo js_parser ml syntax)

(env
 (dev
  (env-vars
   (CPPO_FLAGS -U=RELEASE)))
 (release
  (env-vars
   (CPPO_FLAGS -D=RELEASE))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures)))
 (static
  (env-vars
   (CPPO_FLAGS -D=RELEASE))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures)))
 (browser
  (env-vars
   (CPPO_FLAGS -D=BROWSER))
  (ocamlopt_flags
   (:standard -O3 -unbox-closures))))
