(rule
 (deps
  (alias runtime/runtime)
  (alias others/others)
  stdlib-406/stdlib.cmj)
 (target libocaml.tar.gz)
 (action
  (bash
   "tar -czf libocaml.tar.gz runtime/*.{ml,cm}* others/*.{ml,cm}* stdlib-406/*.{ml,cm}* stdlib-406/stdlib_modules/*.{ml,cm}*")))

(install
 (files libocaml.tar.gz)
 (section lib))
