(lang dune 2.3)

(name rescript-syntax)

(generate_opam_files true)

(license MIT)

(authors "Maxim Valcke <mvalcke@hubspot.com>")

(maintainers "Maxim Valcke <mvalcke@hubspot.com>")

(homepage "https://github.com/rescript-lang/syntax")

(bug_reports "https://github.com/rescript-lang/syntax/issues")

(package
 (name rescript-syntax)
 (synopsis "ReScript parser/printer")
 (depends
  (ocaml
   (>= 4.10))
  (ocamlformat
   (= 0.22.4))
  (reanalyze
   (= 2.23.0))
  dune))
