(library
 (name core)
 (wrapped false)
 (preprocess
  (action
   (run %{bin:cppo} %{env:CPPO_FLAGS=} %{input-file})))
 (flags
  (:standard -w +a-4-9-27-30-40-41-42-48-70))
 (libraries depends gentype js_parser outcome_printer))

; There exist cyclic dependencies between core and frontend, therefore include frontend files here:

(copy_files# ../frontend/*.{ml,mli})

(copy_files# ../cmij/cmij_cache.{ml,mli})
